--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(main)
 set(CMAKE_CXX_STANDART 17)
 
 # Add sub directories
-add_subdirectory(formatter_lib)
-add_subdirectory(formatter_ex_lib)
-add_subdirectory(hello_world_application)
+add_subdirectory(formatter)
+add_subdirectory(formatter_ex)
+add_subdirectory(hello_world)
 add_subdirectory(solver_lib)
-add_subdirectory(solver_application)
+add_subdirectory(solver)
